--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
-body{
-    background-color: gray;
+.zoo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.animal {
+    margin: 1%;
+    padding: 2%;
+    width: 400px;
+    border: 2px solid slategray;
+    text-align: center;
+}
+.animal-img{
+    display: 40%;
 }
