--- a/main.css
+++ b/main.css
@@ -1,16 +1,17 @@
-.zoo{
+#zoo {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-
-.animal {
+  }
+  
+  .animal {
     margin: 1%;
     padding: 2%;
     width: 400px;
     border: 2px solid slategray;
     text-align: center;
-}
-.animal-img{
-    display: 40%;
-}
+  }
+  
+  .animal-image{
+    width: 400px;
+  }
